--- a/packages/google_sign_in/google_sign_in_web/example/pubspec.yaml
+++ b/packages/google_sign_in/google_sign_in_web/example/pubspec.yaml
@@ -18,7 +18,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   google_identity_services_web: ^0.2.0
-  google_sign_in_platform_interface: ^2.2.0
+  # google_sign_in_platform_interface: ^2.2.0
+  google_sign_in_platform_interface:
+    path: ../../google_sign_in_platform_interface
   http: ^0.13.0
   integration_test:
     sdk: flutter
