--- a/packages/google_sign_in/google_sign_in_web/pubspec.yaml
+++ b/packages/google_sign_in/google_sign_in_web/pubspec.yaml
@@ -23,7 +23,9 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   google_identity_services_web: ^0.2.0
-  google_sign_in_platform_interface: ^2.2.0
+  # google_sign_in_platform_interface: ^2.2.0
+  google_sign_in_platform_interface:
+    path: ../google_sign_in_platform_interface
   http: ^0.13.5
   js: ^0.6.3
 
